--- a/static/client.html
+++ b/static/client.html
@@ -45,8 +45,8 @@
 </div>
 </body>
 <!-- 这里  -->
-<script src="http://localhost:3000/socket.io/socket.io.js"></script>
-<script src="http://localhost:3000/socket.js"></script>
+<script src="http://socketio.1473.cn/socket.io/socket.io.js"></script>
+<script src="http://socketio.1473.cn/socket.js"></script>
 <!-- 到这里调用socket的时候必要的 -->
 <script type="text/javascript">
     function jieshou(msg) {
